--- a/Hosting/angular.json
+++ b/Hosting/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/hosting",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
